# python-cli-demo

./: README.md  pyproject.toml
wordinfo/: __main__.py  cli.py
